# WB09_Blinky

./: .clang-format  .gitignore  .mxproject  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  WB09_Blinky.ioc  dep_finder.go  flash_wrapper.go  stm32wb09_flash.ld  wb09  wb09.json
Core/Core/Inc/: app_entry.h  main.h  stm32_assert.h
Core/Core/Src/: main.c  stm32wb0x_hal_msp.c  stm32wb0x_it.c
Core/Inc/: app_ble.h  app_common.h  app_conf.h  app_entry.h  asm.h  ble_conf.h  main.h  stm32_assert.h  stm32wb0x_hal_conf.h  stm32wb0x_hal_i2s.h  stm32wb0x_hal_radio.h  stm32wb0x_hal_smartcard.h  stm32wb0x_hal_spi.h  stm32wb0x_hal_usart.h  stm32wb0x_it.h  stm32wb0x_nucleo_conf.h  utilities_conf.h
Core/Src/: app_ble.c  app_entry.c  main.c  osal.c  stm32wb0x_hal_msp.c  stm32wb0x_it.c  syscalls.c  system_stm32wb0x.c
Drivers/CMSIS/Device/ST/STM32WB0X/Include/: stm32wb09.h
Drivers/STM32WB0x_HAL_Driver/Src/: stm32wb0x_hal_radio.c  stm32wb0x_hal_radio_timer.c  stm32wb0x_hal_uart.c
Middlewares/ST/STM32_BLE/stack/doc/: STM32WB0_BLE_Wireless_Interface.chm
STM32_BLE/App/: app_ble.c  app_ble.h  ble_conf.h  eddystone_beacon.h  eddystone_tlm_service.h  eddystone_uid_service.h  eddystone_url_service.h  ibeacon.h  ibeacon_service.c  p2p_server.c  p2p_server.h  p2p_server_app.c  p2p_server_app.h
STM32_BLE/STM32_BLE/App/: ble_conf.h  eddystone_tlm_service.c  eddystone_uid_service.c  eddystone_url_service.c  ibeacon_service.h
cmake/: arm-none-eabi-gcc.cmake
tools/: TOOLS_README.md  deps.go  flash.go  go.mod  go.sum  main.go  setup.go
tools/cmd/: clean.go  config_cmd.go  deps.go  flash.go  flash_logic.go  format.go  init.go  lpm.go  monitor.go  root.go  scan.go
tools/internal/: config.go  patching.go  preservation.go  project_config.go  utils.go
tools/templates/: Makefile  embed.go
